# tbf15-sample

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile
examples/: build_whl_by_poetry_with_pyarmor.sh  build_whl_by_setuppy_with_pyarmor.sh  pyproject.toml  python-package-legacy.yml  python-package-poetry-with-pyarmor.yml  python-package-poetry.yml
weatherforecast/: __init__.py  analyse_sample.py  open_meteo_forecast_api.py
